HIVE-28463: Java 17 formats and convention upgrades