@@ -63,18 +63,18 @@ public class RetryUtilities {
 
     public ExponentiallyDecayingBatchWork(int batchSize, int reducingFactor, int maxRetries) {
       if (batchSize <= 0) {
-        throw new IllegalArgumentException(String.format(
-            "Invalid batch size %d provided. Batch size must be greater than 0", batchSize));
+        throw new IllegalArgumentException(
+            "Invalid batch size %d provided. Batch size must be greater than 0".formatted(batchSize));
       }
       this.batchSize = batchSize;
       if (reducingFactor <= 1) {
-        throw new IllegalArgumentException(String.format(
-            "Invalid decaying factor %d provided. Decaying factor must be greater than 1",
+        throw new IllegalArgumentException(
+            "Invalid decaying factor %d provided. Decaying factor must be greater than 1".formatted(
             batchSize));
       }
       if (maxRetries < 0) {
-        throw new IllegalArgumentException(String.format(
-            "Invalid number of maximum retries %d provided. It must be a non-negative integer value",
+        throw new IllegalArgumentException(
+            "Invalid number of maximum retries %d provided. It must be a non-negative integer value".formatted(
             maxRetries));
       }
       //if maxRetries is 0 code retries until batch decays to zero
@@ -92,12 +92,12 @@ public class RetryUtilities {
         try {
           return execute(size);
         } catch (Exception ex) {
-          LOG.warn(String.format("Exception thrown while processing using a batch size %d", size),
+          LOG.warn("Exception thrown while processing using a batch size %d".formatted(size),
               ex);
         } finally {
           attempt++;
           if (attempt == maxRetries) {
-            throw new RetryException(String.format("Maximum number of retry attempts %d exhausted", maxRetries));
+            throw new RetryException("Maximum number of retry attempts %d exhausted".formatted(maxRetries));
           }
         }
       }
